--- a/index.html
+++ b/index.html
@@ -8,26 +8,26 @@ description: Ilkka Huotari
     <h2>Projects</h2>
     <ul>
       <li>
-        <h3><a target="_blank" href="http://windowsphone.com/s?appid=ddc56c21-dcf4-425c-bc12-6fe0ee7e09b3" target="_blank">tinyirc</a></h3>
+        <a target="_blank" href="http://windowsphone.com/s?appid=ddc56c21-dcf4-425c-bc12-6fe0ee7e09b3" target="_blank">tinyirc</a>
         <p>An IRC client for Windows Phone.</p>
       </li>
       <li>
-        <h3><a target="_blank" href="https://chrome.google.com/webstore/detail/iniabgbbmccaomaocmhcfioahgipigbh" target="_blank">Start!</a></h3>
+        <a target="_blank" href="https://chrome.google.com/webstore/detail/iniabgbbmccaomaocmhcfioahgipigbh" target="_blank">Start!</a>
         <p>An alternative start page for Google Chrome.</p>
       </li>
       <li>
-        <h3><a target="_blank" href="https://chrome.google.com/webstore/detail/fdplnbbmoikjmjckeclbeaheoehbpbfi" target="_blank">Take Notes</a></h3>
+        <a target="_blank" href="https://chrome.google.com/webstore/detail/fdplnbbmoikjmjckeclbeaheoehbpbfi" target="_blank">Take Notes</a>
         <p>A no-hassle note taking extension for Google Chrome.</p>
       </li>
       <li>
-        <h3><a target="_blank" href="http://ile.github.io/population-calculator/" target="_blank">Population calculator</a></h3>
+        <a target="_blank" href="http://ile.github.io/population-calculator/" target="_blank">Population calculator</a>
         <p>An experiment with D3.</p>
       </li>
       <li>
-        <h3><a target="_blank" href="http://ile.github.io/tilastot/" target="_blank">Statistics visualization of Finland</a></h3>
+        <a target="_blank" href="http://ile.github.io/tilastot/" target="_blank">Statistics visualization of Finland</a>
         <p>Another experiment with D3.</p>
       </li>
-        <h3><a target="_blank" href="https://github.com/ile/">GitHub repos</a></h3>
+        <a target="_blank" href="https://github.com/ile/">GitHub repos</a>
         <p>A lot of code.</p>
       <li>
       </li>
