--- a/contact/index.html
+++ b/contact/index.html
@@ -3,6 +3,6 @@ layout: default
 ---
 
 <section class="wide">
-	<h1 class="center">ilkkah <b>@</b> gmail</h1>
-	<p><img src="https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-ash4/133_11614350121_7543_n.jpg"></p>
+	<h1 class="center">Email me:</h1>
+	<p><img src="/assets/img/contact.png"></p>
 </section>
