--- a/index.html
+++ b/index.html
@@ -6,30 +6,36 @@ description: Ilkka Huotari
 
 <section class="home">
     <h2>Projects</h2>
-    <ul>
+    <ul class="pane-projects">
       <li>
-        <a target="_blank" href="http://windowsphone.com/s?appid=ddc56c21-dcf4-425c-bc12-6fe0ee7e09b3" target="_blank">tinyirc</a>
+        <a target="_blank" href="http://windowsphone.com/s?appid=ddc56c21-dcf4-425c-bc12-6fe0ee7e09b3" target="_blank"><img src="assets/img/windows.png">tinyirc
         <p>An IRC client for Windows Phone.</p>
-      </li>
+        </a>
+        </li>
       <li>
-        <a target="_blank" href="https://chrome.google.com/webstore/detail/iniabgbbmccaomaocmhcfioahgipigbh" target="_blank">Start!</a>
+        <a target="_blank" href="https://chrome.google.com/webstore/detail/iniabgbbmccaomaocmhcfioahgipigbh" target="_blank"><img src="assets/img/chrome.png">Start!
         <p>An alternative start page for Google Chrome.</p>
+        </a>
       </li>
       <li>
-        <a target="_blank" href="https://chrome.google.com/webstore/detail/fdplnbbmoikjmjckeclbeaheoehbpbfi" target="_blank">Take Notes</a>
+        <a target="_blank" href="https://chrome.google.com/webstore/detail/fdplnbbmoikjmjckeclbeaheoehbpbfi" target="_blank"><img src="assets/img/chrome.png">Take Notes
         <p>A no-hassle note taking extension for Google Chrome.</p>
+        </a>
       </li>
       <li>
-        <a target="_blank" href="http://ile.github.io/population-calculator/" target="_blank">Population calculator</a>
-        <p>An experiment with D3.</p>
+        <a target="_blank" href="http://ile.github.io/population-calculator/" target="_blank"><img src="assets/img/html5.png">Population calculator
+          <p>An experiment with D3.</p>
+        </a>
       </li>
       <li>
-        <a target="_blank" href="http://ile.github.io/tilastot/" target="_blank">Statistics visualization of Finland</a>
-        <p>Another experiment with D3.</p>
+        <a target="_blank" href="http://ile.github.io/tilastot/" target="_blank"><img src="assets/img/html5.png">Statistics visualization of Finland
+          <p>Another experiment with D3.</p>
+        </a>
       </li>
-        <a target="_blank" href="https://github.com/ile/">GitHub repos</a>
+      <li>
+        <a target="_blank" href="https://github.com/ile/"><span class="github-logo logo"></span>GitHub repos
         <p>A lot of code.</p>
-      <li>
+        </a>
       </li>
     </ul>
     <h2>Blog</h2>
