--- a/contact/index.html
+++ b/contact/index.html
@@ -3,6 +3,6 @@ layout: default
 ---
 
 <section class="wide">
-	<h1 class="center">Email me:</h1>
+	<h1>Email me:</h1>
 	<p><img src="/assets/img/contact.png"></p>
 </section>
