--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@ description: Ilkka Huotari
     <h2>Projects</h2>
     <ul class="pane-projects">
       <li>
+        <a target="_blank" href="https://derby-demos.herokuapp.com" target="_blank"><img src="https://raw.githubusercontent.com/derbyjs/derby-assets/master/derby-medium-transparent.png">DerbyJS
+        <p>Demos for DerbyJS components.</p>
+        </a>
+        </li>    
+      <li>
         <a target="_blank" href="http://windowsphone.com/s?appid=ddc56c21-dcf4-425c-bc12-6fe0ee7e09b3" target="_blank"><img src="assets/img/windows.png">tinyirc
         <p>An IRC client for Windows Phone.</p>
         </a>
