--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ description: Ilkka Huotari
     <ul class="pane-projects">
       <li>
         <a target="_blank" href="https://derby-demos.herokuapp.com" target="_blank"><img src="https://raw.githubusercontent.com/derbyjs/derby-assets/master/derby-medium-transparent.png">DerbyJS
-        <p>Demos for DerbyJS components.</p>
+        <p>Demos for DerbyJS components..</p>
         </a>
         </li>    
       <li>
