--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ description: Ilkka Huotari
       </li>
       <li>
         <a target="_blank" href="https://chrome.google.com/webstore/detail/fdplnbbmoikjmjckeclbeaheoehbpbfi" target="_blank"><img src="assets/img/chrome.png">Take Notes
-        <p>A no-hassle note taking extension for Google Chrome.</p>
+        <p>A <i>very simple</i> note taking extension for Google Chrome.</p>
         </a>
       </li>
       <li>
