--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ description: Ilkka Huotari
     <h2>Projects</h2>
     <ul class="pane-projects">
       <li>
-        <a target="_blank" href="https://derby-demos.herokuapp.com" target="_blank"><img src="https://raw.githubusercontent.com/derbyjs/derby-assets/master/derby-medium-transparent.png">DerbyJS
+        <a target="_blank" href="http://derby-demos.ilkkah.com" target="_blank"><img src="https://raw.githubusercontent.com/derbyjs/derby-assets/master/derby-medium-transparent.png">DerbyJS
         <p>Demos for DerbyJS components..</p>
         </a>
         </li>    
