--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@ page: home
         </a>
       </li>
       <li>
-        <a target="_blank" href="http://ile.github.io/population-calculator/" target="_blank"><img src="assets/img/html5.png">Population calculator
+        <a href="/population-calculator/" target="_blank"><img src="assets/img/html5.png">Population calculator
           <p>An experiment with D3.</p>
         </a>
       </li>
       <li>
-        <a target="_blank" href="http://ile.github.io/tilastot/" target="_blank"><img src="assets/img/html5.png">Statistics visualization of Finland
+        <a href="/tilastot/" target="_blank"><img src="assets/img/html5.png">Statistics visualization of Finland
           <p>Another experiment with D3.</p>
         </a>
       </li>
