--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@ page: home
     <h2>Projects</h2>
     <ul class="pane-projects">
       <li>
+        <a target="_blank" href="http://nimikirja.fi" target="_blank"><img src="https://cloud.githubusercontent.com/assets/433707/5326249/8f7c9fee-7d16-11e4-96eb-046917378348.png">Nimikirja.fi
+        <p>A remedy for naming problems.</p>
+        </a>
+        </li>    
+      <li>
         <a target="_blank" href="http://derby-demos.ilkkah.com" target="_blank"><img src="https://raw.githubusercontent.com/derbyjs/derby-assets/master/derby-medium-transparent.png">DerbyJS
         <p>Demos for DerbyJS components.</p>
         </a>
