--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ page: home
         </li>    
       <li>
         <a target="_blank" href="http://derby-demos.ilkkah.com" target="_blank"><img src="https://raw.githubusercontent.com/derbyjs/derby-assets/master/derby-medium-transparent.png">DerbyJS
-        <p>Demos for DerbyJS components.</p>
+        <p>Demos of DerbyJS components.</p>
         </a>
         </li>    
       <li>
