--- a/projects/index.html
+++ b/projects/index.html
@@ -1,3 +1,8 @@
+---
+layout: default
+---
+
+<section>
 <h2>Projects</h2>
     <ul class="pane-projects">
       <li>
@@ -36,3 +41,4 @@
         </a>
       </li>
     </ul>
+</section>
