--- a/contact/index.html
+++ b/contact/index.html
@@ -3,6 +3,6 @@ layout: default
 ---
 
 <section class="wide">
-	<p>To contact, use the email address below:</p>
+	<p>To contact, please use the email address below:</p>
 	<p><img src="/assets/img/contact.png"></p>
 </section>
