--- a/projects/index.html
+++ b/projects/index.html
@@ -36,7 +36,7 @@ layout: default
       </li>
       <li>
         <a href="/population-calculator/">
-            <img src="/assets/img/html5.png">Population calculator
+            <img src="https://cloud.githubusercontent.com/assets/433707/5592597/d5ca94aa-91df-11e4-9ec8-0bd4c3e60e6c.png">Population calculator
             <p>An experiment with D3.</p>
         </a>
       </li>
