--- a/projects/index.html
+++ b/projects/index.html
@@ -6,43 +6,50 @@ layout: default
     <ul class="pane-projects">
       <li>
         <a target="_blank" href="http://nimikirja.fi" target="_blank">
-            <img src="https://cloud.githubusercontent.com/assets/433707/5326249/8f7c9fee-7d16-11e4-96eb-046917378348.png">Nimikirja.fi
+            <img src="https://cloud.githubusercontent.com/assets/433707/5326249/8f7c9fee-7d16-11e4-96eb-046917378348.png">
+            <h2>Nimikirja.fi</h2>
             <p>A remedy for naming problems.</p>
         </a>
         </li>    
       <li>
         <a target="_blank" href="http://derby-demos.ilkkah.com" target="_blank">
-            <img src="https://raw.githubusercontent.com/derbyjs/derby-assets/master/derby-medium-transparent.png">DerbyJS
+            <img src="https://raw.githubusercontent.com/derbyjs/derby-assets/master/derby-medium-transparent.png">
+            <h2>DerbyJS</h2>
             <p>Demos of DerbyJS components.</p>
         </a>
         </li>    
       <li>
         <a target="_blank" href="http://windowsphone.com/s?appid=ddc56c21-dcf4-425c-bc12-6fe0ee7e09b3" target="_blank">
-            <img src="/assets/img/windows.png">tinyirc
+            <img src="/assets/img/windows.png">
+            <h2>tinyirc</h2>
             <p>An IRC client for Windows Phone.</p>
         </a>
         </li>
       <li>
         <a target="_blank" href="https://chrome.google.com/webstore/detail/iniabgbbmccaomaocmhcfioahgipigbh" target="_blank">
-            <img src="/assets/img/chrome.png">Start!
+            <img src="/assets/img/chrome.png">
+            <h2>Start!</h2>
             <p>An alternative start page for Google Chrome.</p>
         </a>
       </li>
       <li>
         <a target="_blank" href="https://chrome.google.com/webstore/detail/fdplnbbmoikjmjckeclbeaheoehbpbfi" target="_blank">
-            <img src="/assets/img/chrome.png">Take Notes
+            <img src="/assets/img/chrome.png">
+            <h2>Take Notes</h2>
             <p>A <i>very simple</i> note taking extension for Google Chrome.</p>
         </a>
       </li>
       <li>
         <a href="/population-calculator/">
-            <img src="https://cloud.githubusercontent.com/assets/433707/5592597/d5ca94aa-91df-11e4-9ec8-0bd4c3e60e6c.png">Population calculator
+            <img src="https://cloud.githubusercontent.com/assets/433707/5592597/d5ca94aa-91df-11e4-9ec8-0bd4c3e60e6c.png">
+            <h2>Population calculator</h2>
             <p>An experiment with D3.</p>
         </a>
       </li>
       <li>
         <a href="/tilastot/">
-            <img src="/assets/img/html5.png">Statistics visualization of Finland
+            <img src="/assets/img/html5.png">
+            <h2>Statistics visualization of Finland</h2>
             <p>Another experiment with D3.</p>
         </a>
       </li>
