--- a/projects/index.html
+++ b/projects/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<section>
+<section class="wide">
     <ul class="pane-projects">
       <li>
         <a target="_blank" href="http://nimikirja.fi" target="_blank">
