--- a/projects/index.html
+++ b/projects/index.html
@@ -48,7 +48,7 @@ layout: default
       </li>
       <li>
         <a href="/tilastot/">
-            <img src="/assets/img/html5.png">
+            <img src="https://cloud.githubusercontent.com/assets/433707/5592637/6bc8612e-91e2-11e4-90aa-70f3de77d37c.png">
             <h2>Statistics visualization of Finland</h2>
             <p>Another experiment with D3.</p>
         </a>
