--- a/projects/index.html
+++ b/projects/index.html
@@ -20,7 +20,7 @@ layout: default
         </li>    
       <li>
         <a target="_blank" href="http://windowsphone.com/s?appid=ddc56c21-dcf4-425c-bc12-6fe0ee7e09b3" target="_blank">
-            <img src="/assets/img/windows.png">
+            <img src="https://cloud.githubusercontent.com/assets/433707/5592647/ea9a96a2-91e2-11e4-9636-d31394ee4ee7.png">
             <h2>tinyirc</h2>
             <p>An IRC client for Windows Phone.</p>
         </a>
