--- a/projects/index.html
+++ b/projects/index.html
@@ -14,7 +14,7 @@ layout: default
       <li>
         <a target="_blank" href="http://derby-demos.ilkkah.com" target="_blank">
             <img src="https://raw.githubusercontent.com/derbyjs/derby-assets/master/derby-medium-transparent.png">
-            <h2>DerbyJS</h2>
+            <h2>DerbyJS demos</h2>
             <p>Demos of DerbyJS components.</p>
         </a>
         </li>    
