--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 description: Ilkka Huotari
 ---
 
-<section class="home">
+<section class="home wide">
     <ul class="posts">
       {% for post in site.posts %}
       <li>
