--- a/projects/index.html
+++ b/projects/index.html
@@ -13,7 +13,7 @@ layout: default
         </li>    
       <li>
         <a target="_blank" href="http://derby-demos.ilkkah.com" target="_blank">
-            <img src="https://raw.githubusercontent.com/derbyjs/derby-assets/master/derby-medium-transparent.png">
+            <img src="https://cloud.githubusercontent.com/assets/433707/4425354/d54aab9c-45a8-11e4-8c94-ceb935c4be1d.png">
             <h2>DerbyJS demos</h2>
             <p>Demos of DerbyJS components.</p>
         </a>
