--- a/projects/index.html
+++ b/projects/index.html
@@ -34,7 +34,7 @@ layout: default
       </li>
       <li>
         <a target="_blank" href="https://chrome.google.com/webstore/detail/fdplnbbmoikjmjckeclbeaheoehbpbfi" target="_blank">
-            <img src="/assets/img/chrome.png">
+            <img src="https://cloud.githubusercontent.com/assets/433707/5592728/c1c21f3e-91e7-11e4-98fc-594ec12e4d18.png">
             <h2>Take Notes</h2>
             <p>A <i>very simple</i> note taking extension for Google Chrome.</p>
         </a>
