--- a/projects/index.html
+++ b/projects/index.html
@@ -27,7 +27,7 @@ layout: default
         </li>
       <li>
         <a target="_blank" href="https://chrome.google.com/webstore/detail/iniabgbbmccaomaocmhcfioahgipigbh" target="_blank">
-            <img src="/assets/img/chrome.png">
+            <img src="https://cloud.githubusercontent.com/assets/433707/5592730/12258998-91e8-11e4-8aa7-6d8d6d38ea02.png">
             <h2>Start!</h2>
             <p>An alternative start page for Google Chrome.</p>
         </a>
