--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@ description: Ilkka Huotari
           <a href="{{ post.url }}" title="{{ post.description }}" class="list-group-item">
             {{ post.title }}
           </a>
+          {{ post.excerpt }}
         {% endif %}{% endfor %}
         </div>
       </div>
