--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ description: Ilkka Huotari
       {% for post in site.posts %}
       <li>
         <span class="date">{{ post.date | date_to_string }}</span>
-        <a href="{{ post.url }}">{{ post.title }}</a>
+        <h3></h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
           {% if post.excerpt %}
             <p class="list-group-item-text">{{ post.excerpt }}</p>
           {% endif %}
