--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ description: Ilkka Huotari
         <span class="date">{{ post.date | date_to_string }}</span>
         <h3><a href="{{ post.url }}">{{ post.title }}</a></h3>
           {% if post.excerpt %}
-            <p class="list-group-item-text">{{ post.excerpt }}</p>
+            {{ post.excerpt }}
           {% endif %}
       </li>
       {% endfor %}
