--- a/contact/index.html
+++ b/contact/index.html
@@ -5,4 +5,38 @@ layout: default
 <section class="wide">
 	<p>To contact, please use the email address below:</p>
 	<p><img src="/assets/img/contact.png"></p>
+	<p>PGP public key:</p>
+	<pre>
+-----BEGIN PGP PUBLIC KEY BLOCK-----
+Version: GnuPG v2
+
+mQINBFH9hpQBEACq7wE18Jv3JnRAlStFdNaEd8T0j74qvzUgJD5GWFaFRxIznith
+/IZpbnrim/3uBspKEXYQpW04O7hhVQjfXwSchmoF0CLk6WJbuqH3cWYsgOJIAfgR
+sIsPVH49q0tGhoXkq5NU8ujmKL4fk5+gqtSgdz8aKj2eBsADd2ACJ3hz3DlnzQX+
+v3z+tWJ+sV250KqYvsw/9XilvfZd5OfVQylLdqBS16qE+S0zuGl9dz3eJXF/ZjQG
+4O7CQW6kXDBTR9QhSam73KzXOgBib9sQpBDVLcmksVhXaGOBedLD9n4DRbctk/g3
+LybXfmFUKnFdM9RD5jLbGeS7IJERmyps0k+g0kWulXqiThpsadEcFUb4XP8kYt3i
+pp3Oqh/PxuGo9N+z+jOGFsS7+kz6qzHRKXklq7rCJhxCVF39bUfETeyBC0BwDrWr
+QOoIPitnX4X5Kdab6xpE/Pa7Azpv3La/r0bDSV4C3KlQW5PQy/pW1D7gIJ2ZYTM0
+8gJnRqyfmSgcvdt0Dq4DSldfeNONEAULf99RVPfZ1G09e+93jhbZ/PA2o/W9BKa6
+PSZuQigCiVYz5KCVXsqCOhD3WxE3nHdMVnRtItX+rZC8GlDdgmQRyPHItjOvzXca
+0CafiTmSKd8DJsEpMwo/7/ZxgrTQU0/3wTULi078MvrHBFJPOee/9KJAqQARAQAB
+tCBJbGtrYSBIdW90YXJpIDxpbGtrYWhAZ21haWwuY29tPokCHAQQAQIAEAUCUf2H
+JAkQmw0HmRm+7cAAAIHZD/9krqwwfKAhT17i7EKrQEWhOCtDrJsGETmVEYjjeSUO
+Gf5dF+twPeTXVLoCebNVemtkKxYET8oqt0So7v+t/1RblkzxTomiTytb1V9hs23C
+OidQj5e/jSmuNdiLn3YzpDEZIFwgyO2oo9iMeGp8bakkZJKDwKIHWOcR2ojW3EvF
++bFL14MWHOIgMQ/Y9T6DSAbwJUpaJ7jdP2hAN2L61B/LbaZLJWqk/+a6u75xbXQK
+s/J9QML4YnYtKvULJ7tMNw72bZQw04aubE7wIP9BKS42CvzMpY8YU7aOayqo7Low
+Kfc+cOmN5soJwJ1cbXL1AIm+XexLHYRBkFsYAwuvhZByQ/BdmSArYYcSX3Rzi9AI
+ZS5zyFYkyL3JEwyDsGXrAuUKt4/GECLnTI0nbxrqM5uIiG2Lm0FzqyMuKNKpyFtl
+iH9ouLM9UcsBkIoMZ+04bSSVfCfGNiUHjoGOh5swwbGsHLpB901rWpGgTXpXqdtP
+UJqZt1D7q4a/cMEd19WY00+GdSqEvviGnreaY0XMSpACYDUQbJCJg3ylMKkFmUgg
++T1PkLnteERlVsD1KQoM6w1J+84tjaOuobL8yyR2M0JkZkn7yFgq+O3KeIaFQJUB
+HzvWgrnp1IAJtylXCuTjdJEYnNr/d+Wc+Zla4yvuhh553q9dKUSfgh/g0fLi+c7K
+wA==
+=BBxo
+-----END PGP PUBLIC KEY BLOCK-----
+	</pre>
+
+	<p>Also here: [http://keyserver.ubuntu.com/pks/lookup?op=get&amp;fingerprint=on&amp;search=0x9B0D079919BEEDC0](http://keyserver.ubuntu.com/pks/lookup?op=get&amp;fingerprint=on&amp;search=0x9B0D079919BEEDC0)</p>
 </section>
