--- a/contact/index.html
+++ b/contact/index.html
@@ -38,5 +38,5 @@ wA==
 -----END PGP PUBLIC KEY BLOCK-----
 	</pre>
 
-	<p>Also here: [http://keyserver.ubuntu.com/pks/lookup?op=get&amp;fingerprint=on&amp;search=0x9B0D079919BEEDC0](http://keyserver.ubuntu.com/pks/lookup?op=get&amp;fingerprint=on&amp;search=0x9B0D079919BEEDC0)</p>
+	<p>Also here: <a href="http://keyserver.ubuntu.com/pks/lookup?op=get&amp;fingerprint=on&amp;search=0x9B0D079919BEEDC0">http://keyserver.ubuntu.com/</a></p>
 </section>
