--- a/contact/index.html
+++ b/contact/index.html
@@ -38,5 +38,5 @@ wA==
 -----END PGP PUBLIC KEY BLOCK-----
 	</pre>
 
-	<p>Also here: <a href="http://keyserver.ubuntu.com/pks/lookup?op=get&amp;fingerprint=on&amp;search=0x9B0D079919BEEDC0">http://keyserver.ubuntu.com/</a></p>
+	<p>Also <a href="http://keyserver.ubuntu.com/pks/lookup?op=get&amp;fingerprint=on&amp;search=0x9B0D079919BEEDC0">here</a> and <a href="https://pgp.mit.edu/pks/lookup?op=get&amp;search=0x9B0D079919BEEDC0">here</a>.</p>
 </section>
