--- a/contact/index.html
+++ b/contact/index.html
@@ -6,7 +6,7 @@ layout: default
 	<p>To contact, please use the email address below:</p>
 	<p><img src="/assets/img/contact.png"></p>
 	<p>PGP public key:</p>
-	<pre>
+	<pre class="pgp">
 -----BEGIN PGP PUBLIC KEY BLOCK-----
 Version: GnuPG v2
 
