--- a/contact/index.html
+++ b/contact/index.html
@@ -5,7 +5,7 @@ layout: default
 <section class="wide">
 	<p>To contact, please use the email address below:</p>
 	<p><img src="/assets/img/contact.png"></p>
-	<p>PGP public key:</p>
+	<p>PGP public key (also <a target="_blank" href="http://keyserver.ubuntu.com/pks/lookup?op=get&amp;fingerprint=on&amp;search=0x9B0D079919BEEDC0">here</a> and <a target="_blank" href="https://pgp.mit.edu/pks/lookup?op=get&amp;search=0x9B0D079919BEEDC0">here</a>.):</p>
 	<pre class="pgp">
 -----BEGIN PGP PUBLIC KEY BLOCK-----
 Version: GnuPG v2
@@ -37,6 +37,4 @@ wA==
 =BBxo
 -----END PGP PUBLIC KEY BLOCK-----
 	</pre>
-
-	<p>Also <a href="http://keyserver.ubuntu.com/pks/lookup?op=get&amp;fingerprint=on&amp;search=0x9B0D079919BEEDC0">here</a> and <a href="https://pgp.mit.edu/pks/lookup?op=get&amp;search=0x9B0D079919BEEDC0">here</a>.</p>
 </section>
