--- a/projects/index.html
+++ b/projects/index.html
@@ -6,6 +6,13 @@ layout: default
     <ul class="pane-projects">
       <li>
         <a target="_blank" href="http://nimikirja.fi" target="_blank">
+            <img src="https://cloud.githubusercontent.com/assets/433707/10271933/578e5420-6b21-11e5-8d9f-fcb29e82135d.png">
+            <h2>http://kansalaiskeskustelu.fi/</h2>
+            <p>A blogging platform and a blogging site.</p>
+        </a>
+        </li>    
+      <li>
+        <a target="_blank" href="http://nimikirja.fi" target="_blank">
             <img src="https://cloud.githubusercontent.com/assets/433707/5326249/8f7c9fee-7d16-11e4-96eb-046917378348.png">
             <h2>Nimikirja.fi</h2>
             <p>A remedy for naming problems.</p>
