--- a/projects/index.html
+++ b/projects/index.html
@@ -5,9 +5,9 @@ layout: default
 <section class="wide">
     <ul class="pane-projects">
       <li>
-        <a target="_blank" href="http://nimikirja.fi" target="_blank">
+        <a target="_blank" href="http://kansalaiskeskustelu.fi" target="_blank">
             <img src="https://cloud.githubusercontent.com/assets/433707/10271933/578e5420-6b21-11e5-8d9f-fcb29e82135d.png">
-            <h2>http://kansalaiskeskustelu.fi/</h2>
+            <h2>kansalaiskeskustelu.fi</h2>
             <p>A blogging platform and a blogging site.</p>
         </a>
         </li>    
