--- a/projects/index.html
+++ b/projects/index.html
@@ -5,17 +5,24 @@ layout: default
 <section class="wide">
     <ul class="pane-projects">
       <li>
+        <a target="_blank" href="http://blogistan.fi" target="_blank">
+            <img src="https://cloud.githubusercontent.com/assets/433707/10555792/7ca8116e-747d-11e5-9757-50bde6a24418.png">
+            <h2>blogistan.fi</h2>
+            <p>A blogging platform and a blogging site (for casual blogging).</p>
+        </a>
+        </li>    
+      <li>
         <a target="_blank" href="http://kansalaiskeskustelu.fi" target="_blank">
             <img src="https://cloud.githubusercontent.com/assets/433707/10271933/578e5420-6b21-11e5-8d9f-fcb29e82135d.png">
             <h2>kansalaiskeskustelu.fi</h2>
-            <p>A blogging platform and a blogging site.</p>
+            <p>A blogging platform and a blogging site (for political blogging).</p>
         </a>
         </li>    
       <li>
         <a target="_blank" href="http://nimikirja.fi" target="_blank">
             <img src="https://cloud.githubusercontent.com/assets/433707/5326249/8f7c9fee-7d16-11e4-96eb-046917378348.png">
             <h2>Nimikirja.fi</h2>
-            <p>A remedy for naming problems.</p>
+            <p>A remedy for naming problems. [Suomalaiset etunimet](http://nimikirja.fi) </p>
         </a>
         </li>    
       <li>
