--- a/projects/index.html
+++ b/projects/index.html
@@ -22,7 +22,7 @@ layout: default
         <a target="_blank" href="http://nimikirja.fi" target="_blank">
             <img src="https://cloud.githubusercontent.com/assets/433707/5326249/8f7c9fee-7d16-11e4-96eb-046917378348.png">
             <h2>Nimikirja.fi</h2>
-            <p>A remedy for naming problems. <a href="http://nimikirja.fi">Suomalaiset etunimet</a></p>
+            <p>A remedy for naming problems. Suomalaiset etunimet</p>
         </a>
         </li>    
       <li>
