--- a/projects/index.html
+++ b/projects/index.html
@@ -5,12 +5,19 @@ layout: default
 <section class="wide">
     <ul class="pane-projects">
       <li>
+        <a target="_blank" href="https://embed.rocks/" target="_blank">
+            <img src="https://cloud.githubusercontent.com/assets/433707/22841097/e4cbb282-efd8-11e6-8e2f-cd82c7fcc617.png">
+            <h2>embed.rocks</h2>
+            <p>A web service for embedding 'cards' on your website.</p>
+        </a>
+      </li>            
+      <li>
         <a target="_blank" href="http://maahanmuutosta.fi" target="_blank">
             <img src="https://cloud.githubusercontent.com/assets/433707/10806167/ff82a1c8-7ddb-11e5-85a5-4536f65e3677.png">
             <h2>maahanmuutosta.fi</h2>
             <p>A site that aggregates news stories and blog posts.</p>
         </a>
-        </li>    
+      </li>    
         
       <li>
         <a target="_blank" href="http://blogistan.fi" target="_blank">
