--- a/projects/index.html
+++ b/projects/index.html
@@ -12,25 +12,10 @@ layout: default
         </a>
       </li>            
       <li>
-        <a target="_blank" href="http://maahanmuutosta.fi" target="_blank">
-            <img src="https://cloud.githubusercontent.com/assets/433707/10806167/ff82a1c8-7ddb-11e5-85a5-4536f65e3677.png">
-            <h2>maahanmuutosta.fi</h2>
-            <p>A site that aggregates news stories and blog posts.</p>
-        </a>
-      </li>    
-        
-      <li>
-        <a target="_blank" href="http://blogistan.fi" target="_blank">
-            <img src="https://cloud.githubusercontent.com/assets/433707/10555792/7ca8116e-747d-11e5-9757-50bde6a24418.png">
-            <h2>blogistan.fi</h2>
-            <p>A blogging platform and a blogging site (for casual blogging).</p>
-        </a>
-        </li>    
-      <li>
         <a target="_blank" href="http://kansalaiskeskustelu.fi" target="_blank">
             <img src="https://cloud.githubusercontent.com/assets/433707/10271933/578e5420-6b21-11e5-8d9f-fcb29e82135d.png">
             <h2>kansalaiskeskustelu.fi</h2>
-            <p>A blogging platform and a blogging site (for political blogging).</p>
+            <p>A blogging platform and a blogging site (for political blogging) - currently defunct.</p>
         </a>
         </li>    
       <li>
