--- a/projects/index.html
+++ b/projects/index.html
@@ -5,6 +5,13 @@ layout: default
 <section class="wide">
     <ul class="pane-projects">
       <li>
+        <a target="_blank" href="https://todo.pink/" target="_blank">
+            <img src="https://cloud.githubusercontent.com/assets/433707/23155683/61d3ec4a-f81c-11e6-8aac-279d3636f3db.png">
+            <h2>todo.pink</h2>
+            <p>A simple todo-list app</p>
+        </a>
+      </li>                
+      <li>
         <a target="_blank" href="https://embed.rocks/" target="_blank">
             <img src="https://cloud.githubusercontent.com/assets/433707/22841097/e4cbb282-efd8-11e6-8e2f-cd82c7fcc617.png">
             <h2>embed.rocks</h2>
