--- a/projects/index.html
+++ b/projects/index.html
@@ -33,17 +33,10 @@ layout: default
         </a>
         </li>    
       <li>
-        <a target="_blank" href="http://derby-demos.ilkkah.com" target="_blank">
-            <img src="https://cloud.githubusercontent.com/assets/433707/4425354/d54aab9c-45a8-11e4-8c94-ceb935c4be1d.png">
-            <h2>DerbyJS demos</h2>
-            <p>Demos of DerbyJS components.</p>
-        </a>
-        </li>    
-      <li>
         <a target="_blank" href="http://windowsphone.com/s?appid=ddc56c21-dcf4-425c-bc12-6fe0ee7e09b3" target="_blank">
             <img src="https://cloud.githubusercontent.com/assets/433707/5592652/482e3c60-91e3-11e4-8c80-726a71afede4.png">
             <h2>tinyirc</h2>
-            <p>An IRC client for Windows Phone.</p>
+            <p>An IRC client for Windows Phone. (defunct)</p>
         </a>
         </li>
       <li>
